--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,43 @@
 version: '3.9'
 
 services:
-  # PostgreSQL Database
-  db:
+  # PostgreSQL Database для clothing
+  db_clothing:
     image: postgres:latest
     container_name: mvs-clothing_db
     restart: unless-stopped
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_clothing_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     networks:
-      - internal
+      - clothing_internal
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  # Redis
-  redis:
+  # Redis для clothing (отдельный инстанс)
+  redis_clothing:
     image: redis:latest
     container_name: mvs-clothing_redis
     restart: unless-stopped
     volumes:
-      - redis_data:/data
+      - redis_clothing_data:/data
     networks:
-      - internal
+      - clothing_internal
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 3s
       retries: 5
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --port 6380
 
-  # Django Web Application
-  web:
+  # Django Web Application для clothing
+  web_clothing:
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -46,29 +46,29 @@ services:
     command: >
       sh -c "python manage.py migrate &&
              python manage.py collectstatic --noinput &&
-             gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 120"
+             gunicorn config.wsgi:application --config gunicorn.conf.py"
     volumes:
       - ./backend:/app
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
+      - static_clothing_volume:/app/staticfiles
+      - media_clothing_volume:/app/media
     env_file:
       - ./backend/.env
     environment:
-      - DB_HOST=db
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DB_HOST=db_clothing
+      - CELERY_BROKER_URL=redis://redis_clothing:6380/0
+      - CELERY_RESULT_BACKEND=redis://redis_clothing:6380/0
     depends_on:
-      db:
+      db_clothing:
         condition: service_healthy
-      redis:
+      redis_clothing:
         condition: service_healthy
     networks:
-      - internal
+      - clothing_internal
     expose:
-      - "8000"
+      - "8002"
 
-  # Celery Worker
-  celery:
+  # Celery Worker для clothing
+  celery_clothing:
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -77,39 +77,39 @@ services:
     command: celery -A config worker -l info
     volumes:
       - ./backend:/app
-      - media_volume:/app/media
+      - media_clothing_volume:/app/media
     env_file:
       - ./backend/.env
     environment:
-      - DB_HOST=db
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DB_HOST=db_clothing
+      - CELERY_BROKER_URL=redis://redis_clothing:6380/0
+      - CELERY_RESULT_BACKEND=redis://redis_clothing:6380/0
     depends_on:
-      db:
+      db_clothing:
         condition: service_healthy
-      redis:
+      redis_clothing:
         condition: service_healthy
     networks:
-      - internal
+      - clothing_internal
 
-  # Nginx Reverse Proxy
-  nginx:
+  # Nginx для clothing
+  nginx_clothing:
     image: nginx:latest
     container_name: mvs-clothing_nginx
     restart: unless-stopped
     ports:
-      - "80:80"
-      - "443:443"
+      - "8002:80"
+      - "8443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - static_volume:/app/staticfiles:ro
-      - media_volume:/app/media:ro
-      - nginx_logs:/var/log/nginx
+      - static_clothing_volume:/app/staticfiles:ro
+      - media_clothing_volume:/app/media:ro
+      - nginx_clothing_logs:/var/log/nginx
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
-      - web
+      - web_clothing
     networks:
-      - internal
+      - clothing_internal
       - external
     healthcheck:
       test: ["CMD", "nginx", "-t"]
@@ -118,14 +118,14 @@ services:
       retries: 3
 
 networks:
-  internal:
+  clothing_internal:
     driver: bridge
   external:
     driver: bridge
 
 volumes:
-  postgres_data:
-  redis_data:
-  static_volume:
-  media_volume:
-  nginx_logs:
+  postgres_clothing_data:
+  redis_clothing_data:
+  static_clothing_volume:
+  media_clothing_volume:
+  nginx_clothing_logs:
