--- a/nginx.conf
+++ b/nginx.conf
@@ -34,21 +34,21 @@ http {
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
     gzip_disable "msie6";
 
-    upstream django {
-        server web:8000;
+    upstream django_clothing {
+        server web_clothing:8002;
     }
 
     # HTTP - Redirect to HTTPS
     server {
         listen 80;
-        server_name YOUR_DOMAIN www.YOUR_DOMAIN;
+        server_name mvs-clothing.site www.mvs-clothing.site;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
 
         location / {
-            return 301 https://$host$request_uri;
+            #return 301 https://$host$request_uri;
         }
     }
 
@@ -56,11 +56,11 @@ http {
     server {
         listen 443 ssl;
         http2 on;
-        server_name YOUR_DOMAIN www.YOUR_DOMAIN;
+        server_name mvs-clothing.site www.mvs-clothing.site;
 
-        # SSL certificates (update paths when you get certificates)
-        ssl_certificate /etc/letsencrypt/live/YOUR_DOMAIN/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/YOUR_DOMAIN/privkey.pem;
+        # SSL certificates
+        ssl_certificate /etc/letsencrypt/live/mvs-clothing.site/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/mvs-clothing.site/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
@@ -94,7 +94,7 @@ http {
 
         # Proxy to Django
         location / {
-            proxy_pass http://django;
+            proxy_pass http://django_clothing;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
