--- a/nginx.conf
+++ b/nginx.conf
@@ -48,7 +48,7 @@ http {
         }
 
         location / {
-            #return 301 https://$host$request_uri;
+            return 301 https://$host$request_uri;
         }
     }
 
@@ -58,7 +58,6 @@ http {
         http2 on;
         server_name mvs-clothing.site www.mvs-clothing.site;
 
-        # SSL certificates
         ssl_certificate /etc/letsencrypt/live/mvs-clothing.site/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/mvs-clothing.site/privkey.pem;
 
