--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,100 +1,161 @@
-version: '3.9'
+version: '3.8'
 
 services:
   # PostgreSQL Database
-  db:
-    image: postgres:latest
+  db_clothing:
+    image: postgres:15-alpine
     container_name: mvs-clothing_db
     restart: unless-stopped
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-    networks:
-      - internal
+      - POSTGRES_DB=${DB_NAME:-mvs_clothing_db}
+      - POSTGRES_USER=${DB_USER:-mvs_clothing_user}
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-change_me_in_production}
+    # Порт закрыт для внешнего доступа - только внутри Docker сети
+    # Для отладки можно временно раскомментировать:
+    # ports:
+    #   - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-mvs_clothing_user}"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - mvs_network
 
-  # Redis
-  redis:
-    image: redis:latest
+  # Redis Cache and Celery Broker
+  redis_clothing:
+    image: redis:7-alpine
     container_name: mvs-clothing_redis
     restart: unless-stopped
-    volumes:
-      - redis_data:/data
-    networks:
-      - internal
+    command: redis-server --port 6379 --maxmemory 256mb --maxmemory-policy allkeys-lru
+    # Порт закрыт для внешнего доступа - только внутри Docker сети
+    # Для отладки можно временно раскомментировать:
+    # ports:
+    #   - "6379:6379"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 3s
       retries: 5
-    command: redis-server --appendonly yes
+    networks:
+      - mvs_network
 
-  # Django Web Application
-  web:
+  # Django Backend
+  web_clothing:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: mvs-clothing_web
     restart: unless-stopped
-    command: >
-      sh -c "python manage.py migrate &&
-             python manage.py collectstatic --noinput &&
-             gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 120"
+    command: /entrypoint.sh
     volumes:
       - ./backend:/app
       - static_volume:/app/staticfiles
       - media_volume:/app/media
+      - logs_volume:/app/logs
     env_file:
       - ./backend/.env
     environment:
-      - DB_HOST=db
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DB_HOST=db_clothing
+      - DB_PORT=5432
+      - CELERY_BROKER_URL=redis://redis_clothing:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis_clothing:6379/0
+    # Порт закрыт - доступ только через Nginx
+    # Для отладки можно временно раскомментировать:
+    # ports:
+    #   - "8000:8000"
     depends_on:
-      db:
+      db_clothing:
         condition: service_healthy
-      redis:
+      redis_clothing:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     networks:
-      - internal
-    expose:
-      - "8000"
+      - mvs_network
 
   # Celery Worker
-  celery:
+  celery_clothing:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: mvs-clothing_celery
     restart: unless-stopped
-    command: celery -A config worker -l info
+    entrypoint: ["/entrypoint-celery.sh"]
+    command: celery -A config worker -l info --logfile=/app/logs/celery.log
     volumes:
       - ./backend:/app
-      - media_volume:/app/media
+      - logs_volume:/app/logs
     env_file:
       - ./backend/.env
     environment:
-      - DB_HOST=db
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - DB_HOST=db_clothing
+      - DB_PORT=5432
+      - CELERY_BROKER_URL=redis://redis_clothing:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis_clothing:6379/0
     depends_on:
-      db:
+      db_clothing:
         condition: service_healthy
-      redis:
+      redis_clothing:
         condition: service_healthy
     networks:
-      - internal
+      - mvs_network
+
+  # Celery Beat (Optional - for scheduled tasks)
+  celery_beat:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: mvs-clothing_celery_beat
+    restart: unless-stopped
+    entrypoint: ["/entrypoint-celery.sh"]
+    command: celery -A config beat -l info --logfile=/app/logs/celery-beat.log
+    volumes:
+      - ./backend:/app
+      - logs_volume:/app/logs
+    env_file:
+      - ./backend/.env
+    environment:
+      - DB_HOST=db_clothing
+      - DB_PORT=5432
+      - CELERY_BROKER_URL=redis://redis_clothing:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis_clothing:6379/0
+    depends_on:
+      db_clothing:
+        condition: service_healthy
+      redis_clothing:
+        condition: service_healthy
+    networks:
+      - mvs_network
+
+  # Vue.js Frontend
+  frontend_clothing:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: mvs-clothing_frontend
+    restart: unless-stopped
+    volumes:
+      - frontend_logs:/var/log/nginx
+    depends_on:
+      - web_clothing
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      - mvs_network
 
   # Nginx Reverse Proxy
-  nginx:
-    image: nginx:latest
+  nginx_clothing:
+    image: nginx:alpine
     container_name: mvs-clothing_nginx
     restart: unless-stopped
     ports:
@@ -107,25 +168,30 @@ services:
       - nginx_logs:/var/log/nginx
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
-      - web
-    networks:
-      - internal
-      - external
+      - web_clothing
+      - frontend_clothing
     healthcheck:
       test: ["CMD", "nginx", "-t"]
       interval: 30s
       timeout: 10s
       retries: 3
-
-networks:
-  internal:
-    driver: bridge
-  external:
-    driver: bridge
+    networks:
+      - mvs_network
 
 volumes:
   postgres_data:
-  redis_data:
+    driver: local
   static_volume:
+    driver: local
   media_volume:
+    driver: local
+  logs_volume:
+    driver: local
   nginx_logs:
+    driver: local
+  frontend_logs:
+    driver: local
+
+networks:
+  mvs_network:
+    driver: bridge
