--- a/nginx.conf
+++ b/nginx.conf
@@ -34,14 +34,18 @@ http {
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
     gzip_disable "msie6";
 
-    upstream django {
-        server web:8000;
+    upstream django_clothing {
+        server web_clothing:8000;
+    }
+
+    upstream frontend_clothing {
+        server frontend_clothing:80;
     }
 
     # HTTP - Redirect to HTTPS
     server {
         listen 80;
-        server_name YOUR_DOMAIN www.YOUR_DOMAIN;
+        server_name enf-demo.site www.enf-demo.site;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -56,11 +60,10 @@ http {
     server {
         listen 443 ssl;
         http2 on;
-        server_name YOUR_DOMAIN www.YOUR_DOMAIN;
+        server_name enf-demo.site www.enf-demo.site;
 
-        # SSL certificates (update paths when you get certificates)
-        ssl_certificate /etc/letsencrypt/live/YOUR_DOMAIN/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/YOUR_DOMAIN/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/enf-demo.site/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/enf-demo.site/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
@@ -78,7 +81,7 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
-        # Static files
+        # Static files from Django
         location /static/ {
             alias /app/staticfiles/;
             expires 30d;
@@ -92,9 +95,9 @@ http {
             add_header Cache-Control "public";
         }
 
-        # Proxy to Django
-        location / {
-            proxy_pass http://django;
+        # API and Admin routes to Django backend
+        location ~ ^/(api|admin|auth)/ {
+            proxy_pass http://django_clothing;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -116,6 +119,21 @@ http {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
+        }
+
+        # Frontend - all other routes
+        location / {
+            proxy_pass http://frontend_clothing;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+
+            # WebSocket support (if needed)
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 }
