--- a/nginx.conf
+++ b/nginx.conf
@@ -45,7 +45,7 @@ http {
     # HTTP - Redirect to HTTPS
     server {
         listen 80;
-        server_name enf-demo.site www.enf-demo.site;
+        server_name mvs-clothing.site www.mvs-clothing.site;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -60,7 +60,7 @@ http {
     server {
         listen 443 ssl;
         http2 on;
-        server_name enf-demo.site www.enf-demo.site;
+        server_name mvs-clothing.site www.mvs-clothing.site;
 
         ssl_certificate /etc/letsencrypt/live/enf-demo.site/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/enf-demo.site/privkey.pem;
