--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,6 +15,11 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
+    # НЕ обрабатываем API, admin и auth роуты - они идут к Django
+    location ~ ^/(api|admin|auth|static|media)/ {
+        return 404;
+    }
+
     # Main location for SPA
     location / {
         try_files $uri $uri/ /index.html;
