--- a/nginx.conf
+++ b/nginx.conf
@@ -81,22 +81,37 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
-        # Static files from Django
         location /static/ {
             alias /app/staticfiles/;
             expires 30d;
             add_header Cache-Control "public, immutable";
         }
 
-        # Media files
+
         location /media/ {
             alias /app/media/;
             expires 7d;
             add_header Cache-Control "public";
         }
+        location /admin {
+            return 301 $scheme://$host/admin/;
+        }
 
-        # API and Admin routes to Django backend
-        location ~ ^/(api|admin|auth)/ {
+        location /admin/ {
+            proxy_pass http://django_clothing;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+
+            proxy_connect_timeout 120s;
+            proxy_send_timeout 120s;
+            proxy_read_timeout 120s;
+        }
+
+        # API routes
+        location /api/ {
             proxy_pass http://django_clothing;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -114,14 +129,13 @@ http {
             proxy_busy_buffers_size 8k;
         }
 
-        # Health check
         location /health/ {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
         }
 
-        # Frontend - all other routes
+
         location / {
             proxy_pass http://frontend_clothing;
             proxy_set_header Host $host;
@@ -130,7 +144,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect off;
 
-            # WebSocket support (if needed)
+            # WebSocket support
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
